# embedding-api

./: .env.example  .gitignore  Dockerfile  README.md  build.sh  chunker.py  ecosystem.config.js  main.py  pyproject.toml  test_chunk_embed.py
multi_tool_agent/: .env.example  agent.py
