[project]
name = "embedding-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymilvus>=2.4.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "setfit>=1.0.0",
    "datasets>=2.14.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "numpy>=2.4.1",
    "networkx>=3.6.1",
    "ttp>=0.10.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.30.0",
]
